refactor: move TestResults to platform.utils package fix: use URI instead of URL (deprecated constructor)